Finally got purchasing snacks and tickets working as well as viewing the users purchased things. Also made various quality changes and improved the UI/themeing.

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,8 +1,14 @@
-$primary: #003057;
+$primary: #bb1705;
 $info: #429feb;
 $success: hsl(139, 75%, 24%);
 $warning: #f3f72c;
 $danger: #b80404;
+
+// $primary: #003057;
+// $info: #429feb;
+// $success: hsl(139, 75%, 24%);
+// $warning: #f3f72c;
+// $danger: #b80404;
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 $font-family-base: "Roboto Mono";
